--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <nav>
+    <%= link_to "Cars", '/cars' %>
+    <%= link_to "Parts", '/parts' %>
+    </nav>
     <%= yield %>
   </body>
 </html>
